[ECO-651] Fix styling on Reset Link

--- a/src/popup/styles/custom.scss
+++ b/src/popup/styles/custom.scss
@@ -27,5 +27,11 @@ button.link {
 
 .reset-vault {
   text-align: center;
-  font-size: smaller;
+  font-size: small;
+  padding-top: 0.6rem;
+}
+
+.text-danger {
+  text-decoration: none;
+  color: red;
 }
