--- a/src/popup/styles/custom.scss
+++ b/src/popup/styles/custom.scss
@@ -40,6 +40,18 @@ button.link {
 .prompt-container {
   padding: 10px;
 
+  .prompt-bottom-buttons {
+    position: fixed;
+    bottom: 35px;
+    width: 200px;
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  .MuiListItem-root {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
   .MuiDialogTitle-root {
     padding: 0px;
   }
