Updated start-here button color and position

--- a/src/popup/styles/custom.scss
+++ b/src/popup/styles/custom.scss
@@ -54,6 +54,10 @@ button.link {
     margin-right: 8px;
   }
 
+  .start-here-button {
+    color: var(--cspr-red);
+  }
+
   .MuiListItem-root {
     padding-top: 0;
     padding-bottom: 0;
